--- a/hons/docs/complexity6.tex
+++ b/hons/docs/complexity6.tex
@@ -18,6 +18,8 @@ Graph $G$
 \end{align}
 
 We shall deal exclusively with so-called ``undirected'' graphs, in which $\forall (u,v) \in E : (u,v) = (v,u)$.
+
+Note: if $V' \subset V \vee E' \subset E$ then we may call the graph $G'=(V',E')$ a \emph{subgraph} of $G=(V,E)$.
 \end{definition}
 
 \begin{definition}
@@ -26,12 +28,18 @@ Path Predicate.
 This predicate $\pi$ is true in the following cases:
 
 \begin{align}
-	\nonumber \forall (u,v) \in V^2 : \pi(u, v) \Leftrightarrow & \langle (u, v) \in E \\
+	\nonumber \forall (u,v) \in V^2 : \pi(u, v) \Leftrightarrow & ( (u, v) \in E \\
 	\nonumber & \vee \langle \exists w \in V : \pi(u, w) \wedge (w, v) \in E \rangle \\
-	\nonumber & \vee u = v \rangle
+	\nonumber & \vee u = v )
 \end{align}
 
-For simplicity we shall use $\not\pi(u, v)$ when the predicate does not hold.
+Note also then that:
+
+\begin{align}
+	\nonumber \exists w \in V : \pi(u, w) \wedge \pi(w, v) \Rightarrow \pi(u, v)
+\end{align}
+
+For simplicity we shall use $\neg\pi(u, v)$ when the predicate does not hold.
 
 For clarity we may say $\pi_{(V,E)}$ to explicitly state that this predicate applies to the graph $G=(V,E)$.
 
@@ -40,8 +48,8 @@ For clarity we may say $\pi_{(V,E)}$ to explicitly state that this predicate app
 \begin{definition}
 {\em Multi-Terminal Cut}
 
-Given a graph $G=(V,E,w,T)$, a set $T=\{t_1, t_2, ... t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$ , and a positive weight $w(e)$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
-An instance of MTC is therefore defined fromally:
+Given a graph $G=(V,E,w,T)$, a set $T=\{t_1, t_2, ..., t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$, and a positive weight $w(e)$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
+An instance of MTC is therefore defined formally:
 
 \begin{align}
 	\nonumber MTC = & (V,E,w,T)\\
@@ -59,26 +67,26 @@ Solution Cost: $C : 2^E \rightarrow \mathbb{Z}^+$
 
 Feasible Solution Space: $F \subseteq 2^E$
 \begin{align}
-	\nonumber \forall (s, t) \in T^2 \setminus \{(r, r) | r \in T\} : \not\pi(s, t)
+	\nonumber \forall S \in F : \forall (s, t) \in T^2 \setminus \{(r, r) | r \in T\} : \neg\pi_(V, E \setminus S)(s, t)
 \end{align}
 
 Optimal Solution Space: $O \subseteq F$
 \begin{align}
-	\forall S_j \in F , \quad \forall S_i \in O \quad \nonumber C(S_i) \leq C(S_j)
+	\forall S_o \in O : \forall S_f \in F : \nonumber C(S_o) \leq C(S_f)
 \end{align}
 
 \end{definition}
 
 \begin{definition}
-The {\em Residual Graph} ($G_r$) is the graph of MTC(V,E,w,T) with the edges in its solution $S \in 2^E$ removed:
+The {\em residual graph} ($G_r$) is a subgraph of MTC(V,E,w,T) with some subset of edges $S \subseteq E$ removed:
 
-$G_r = (V, E \setminus S)$
+$G_r = (V, E \setminus S, w, T)$
 \end{definition}
 
 \begin{definition}
 {\em Robust Actor Allocation}
 
-Given a graph $G=(V,E,w_c,w_i)$, a partitioning of $V$ into $k$ subsets and a set of processors $P$, where $w_c : E \rightarrow \mathbb{Z}^+$ and $w_i : V \times P \rightarrow \mathbb{Z}^+$, find a mapping $\alpha : V \rightarrow P$ such that:
+Given a graph $G=(V,E,w_c,w_i, P, A)$, a partitioning of $V$ into $k$ subsets and a set of processors $P$, where $w_c : E \rightarrow \mathbb{Z}^+$ and $w_i : V \times P \rightarrow \mathbb{Z}^+$, find a mapping $\alpha : V \rightarrow P$ such that:
 $\displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \alpha(v))$ is minimised and no actors in the same partition are assigned to the same processor.
 
 \begin{align}
@@ -87,10 +95,10 @@ $\displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \d
 	\nonumber & w_c : E \rightarrow \mathbb{Z}^+\\
 	\nonumber & w_i : V \times P \rightarrow \mathbb{Z}^+\\
 	\nonumber & P = \{p_1, p_2, ...p_p\} \\
-	\nonumber & A = \{A_1, A_2, ..., A_k : \displaystyle\bigcup\limits_{i=1}^k A_i = V \wedge \forall A_i \neq A_j \in A : A_i \cap A_j = \emptyset\}
+	\nonumber & A \subseteq 2^V \quad s.t. : \displaystyle\bigcup\limits_{S \in A} S = V \wedge \langle \forall S_1, S_2 \in A : S_1 \neq S_2 \Rightarrow S_1 \cap S_2 = \emptyset \rangle
 \end{align}
 
-Solution Space: $\alpha \in P^V \subseteq P(V \times P)$
+Solution Space: $\alpha \in P^V \subseteq 2^{V \times P}$
 
 Solution Cost: $C : P^V \rightarrow \mathbb{Z}^+$
 \begin{align}
@@ -228,7 +236,7 @@ The reverse solution for any feasible $\alpha$ is also a feasible $S$.
 \end{align}
 \end{lemma}
 \begin{proof}
-In other words, we must show that $\forall s \neq t \in T : \not\pi_{(V, E \setminus \gamma(\alpha))}(s, t)$.
+In other words, we must show that $\forall s \neq t \in T : \neg\pi_{(V, E \setminus \gamma(\alpha))}(s, t)$.
 
 To prove this by contradiction let us presume $\exists \beta \in F' : \gamma(\beta) \not\in F$.
 Therefore $\exists (s, t) \in T^2 \setminus \{(r,r) | r \in T\} : \pi_{(V, E \setminus \gamma(\alpha))}(s, t)$.
@@ -253,7 +261,7 @@ But this is a contradiction.
 %Any node with a path to a terminal in the residual graph has no path to any other terminal in that graph.
 %
 %\begin{align}
-%	\nonumber \forall v \in V, t \in T : \pi_{G_r}(v,t) \Rightarrow \forall s \in T \setminus \{t\} : \not\pi(v,s)
+%	\nonumber \forall v \in V, t \in T : \pi_{G_r}(v,t) \Rightarrow \forall s \in T \setminus \{t\} : \neg\pi(v,s)
 %\end{align}
 %\end{lemma}
 %\begin{proof}
