Time to get the ball rolling

--- a/hons/docs/complexity6.tex
+++ b/hons/docs/complexity6.tex
@@ -67,7 +67,7 @@ Solution Cost: $C : 2^E \rightarrow \mathbb{Z}^+$
 
 Feasible Solution Space: $F \subseteq 2^E$
 \begin{align}
-	\nonumber \forall S \in F : \forall (s, t) \in T^2 \setminus \{(r, r) | r \in T\} : \neg\pi_(V, E \setminus S)(s, t)
+	\nonumber \forall S \in F : \forall (s, t) \in T^2 \setminus \{(r, r) | r \in T\} : \neg\pi_{(V, E \setminus S)}(s, t)
 \end{align}
 
 Optimal Solution Space: $O \subseteq F$
