--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -7,20 +7,13 @@
 \author{Nic Hollingum - 308193415}
 \title{Thesis working title}
 
+\input{txSymbols}
+
 \begin{document}
 
 \maketitle
 
-\input{tIntroduction}
-\input{tBackground}
-\input{tExample}
-\input{tSystems}
-\input{tModel}
-\input{tHardness}
-\input{tAlgos}
-\input{tExperiment}
-\input{tRelated}
-\input{tConclusion}
+\input{thesis.temp}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
