--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -2,6 +2,7 @@
 
 \usepackage{graphicx}
 \usepackage{amssymb,amsmath}
+\usepackage{pslatex}
 \usepackage{theorem}
 
 \author{Nic Hollingum - 308193415}
